tests/baselines/reference/privateNameMethod.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameMethod.ts(7,22): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
tests/cases/conformance/classes/members/privateNames/privateNameMethod.ts(8,14): error TS2554: Expected 1 arguments, but got 0.


==== tests/cases/conformance/classes/members/privateNames/privateNameMethod.ts (2 errors) ====
    class A1 {
        #method(param: string): string {
            return "";
        }
        constructor(name: string) {
            this.#method("")
            this.#method(1) // Error
                         ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
            this.#method()  // Error 
                 ~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 tests/cases/conformance/classes/members/privateNames/privateNameMethod.ts:2:13: An argument for 'param' was not provided.
    
        }
    }
    